Spec #26226: misc bug fixes - fix z-index issue for notification panel with Ext docked items - all core-userNotification action to work with experimental feature disabled - add informative display for core-userNotification page when user doesn't have any records to show

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -3883,7 +3883,7 @@ a div.x4-menu-item-icon.fa-users
     color:#ffffff;
     height:100%;
     width:400px;
-    /*z-index: 2147483630;*/
+    z-index: 2147483630; /* see relationship to value for miniprofiler */
 }
 .lk-notification, .lk-notificationnone
 {
@@ -3957,7 +3957,6 @@ a div.x4-menu-item-icon.fa-users
     height: 100px;
     word-wrap: break-word;
     white-space: normal;
-    /*overflow: visible;*/
     padding-left: 40px;
 }
 .lk-notificationicon
